<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Tv_titulo"
        android:layout_width="309dp"
        android:layout_height="126dp"
        android:text="@string/btn_inicio_sesion"
        android:textAlignment="center"
        android:textSize="@dimen/Et_margerIzq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <Button
        android:id="@+id/btn_inicio"
        android:layout_width="341dp"
        android:layout_height="66dp"
        android:text="@string/btn_inicio_sesion"
        android:onClick="IniciarSesion"
        android:layout_margin="@dimen/Et_margenPeq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_contrasenia" />

    <EditText
        android:id="@+id/Et_usuario"
        android:layout_width="341dp"
        android:layout_marginTop="@dimen/Et_margen"
        android:drawableLeft="@mipmap/ic_usuario"
        android:layout_height="66dp"
        android:ems="10"
        android:layout_margin="@dimen/Et_margenPeq"
        android:inputType="textPersonName"
        android:hint="@string/Et_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_titulo" />

    <EditText
        android:id="@+id/Et_contrasenia"
        android:layout_width="341dp"
        android:layout_height="66dp"
        android:drawableLeft="@mipmap/ic_candado"
        android:layout_margin="@dimen/Et_margenPeq"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/Et_contrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Et_usuario" />


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="159dp"
        android:layout_height="110dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_inventario" />
</androidx.constraintlayout.widget.ConstraintLayout>